# Python-42

Module_00/ex0/: ft_hello_garden.py
Module_00/ex01/: ft_plot_area.py
Module_00/ex02/: ft_harvest_total.py
Module_00/ex05/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module_00/ex06/: ft_garden_summary.py
Module_00/ex07/: ft_seed_inventory.py
Module_00/ex1/: ft_plot_area.py
Module_00/ex2/: ft_harvest_total.py
Module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module_01/ex0/: ft_garden_intro.py
Module_01/ex1/: ft_garden_data.py
Module_01/ex2/: ft_plant_growth.py
Module_06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Module_07/: battle.py  capacitor.py  tournament.py
Module_08/: pyproject.toml
Module_08/ex0/: construct.py
Module_08/ex1/: loading.py  pyproject.toml
Module_08/ex2/: .env.example  .gitignore  oracle.py  requirements.txt
OOP/: class-method.py  main.py  oop_concepts.txt  static-method.py
python/: calculator.py  conditions and booleans.py  dictionaries.py  error-handling-test.py  file.txt  files.py  files_handling.py  functions.py  guess-game.py  iostreams.py  iterrator.py  linkedList.py  list.py  loops.py  main.py  my_modules.py  program.py  py_dantic.py  real_diff_b_pydantic_and_normal_validation.py  set.py  stack.py  test_api.py  try-except.py  tuple.py  unpacking.py  user_data.py  work_pydantic.py
(+52 files in other folders)
