[project]
name = "module-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Hamid Oukaamouch",email = "hamid.oukaamouch@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
