[tool.poetry]
name = "module-08"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Hamid Oukaamouch <email>"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.1.0"
numpy = ">=1.25.0"
requests = ">=2.31.0"
matplotlib = ">=3.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
